Fixes z-index bug with menu and projects

--- a/app/assets/stylesheets/flipping_panel.css.scss
+++ b/app/assets/stylesheets/flipping_panel.css.scss
@@ -14,7 +14,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 900;
+  z-index: 10;
   width: inherit;
   height: inherit;
   background: #6b7077;
@@ -36,7 +36,7 @@
   transition: all .3s ease-in-out;
 }
 .panel:hover .front {
-  z-index: 900;
+  z-index: 10;
   background: #333;
 
   -webkit-transform: rotateY(180deg);
@@ -48,7 +48,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 800;
+  z-index: 5;
   width: inherit;
   height: inherit;
   background: $hover_color;
@@ -69,7 +69,7 @@
 }
 
 .panel:hover .back {
-  z-index: 1000;
+  z-index: 15;
   background: $hover_color;
 
   -webkit-transform: rotateX(0deg) rotateY(0deg);
